<resources>
    <string name="app_name">tugas3_2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_developer">Developer</string>
    <string name="Developer1">Developer</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="tv_createAccount">Create a new account!</string>
    <string name="silahkan">Silahkan login untuk memakai aplikasi</string>
    <string name="img_logo">logo</string>
    <string name="nav_email">maysrahan12@gmail.com</string>
    <string name="sign_in">SIGN IN</string>
</resources>