<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/img_logo"
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/logotext" />

        <TextView
            android:id="@+id/tvSilahkan"
            android:layout_below="@+id/ivLogo"
            android:textAlignment="center"
            android:layout_marginBottom="50dp"
            android:text="@string/silahkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:autofillHints="@string/hint_username"
            android:id="@+id/etUsername"
            android:drawableStart="@drawable/ic_username"
            android:hint="@string/hint_username"
            android:layout_below="@+id/tvSilahkan"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <EditText
            android:id="@+id/etPassword"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:layout_below="@+id/etUsername"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/hint_password" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="185dp"
            android:text="@string/sign_in"
            android:layout_height="60dp"
            android:layout_below="@id/etPassword"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#E9ED5186" />

        <TextView
            android:text="@string/tv_createAccount"
            android:textAlignment="center"
            android:layout_below="@id/btnLogin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </RelativeLayout>

</LinearLayout>